mise à jour html

--- a/index.html
+++ b/index.html
@@ -74,117 +74,128 @@
     <main>
         <section class="hebergement">
             <h2>Hébergement à Marseille</h2>
+
             <!-- 1re ligne -->
-            <a href="#">
-                <figure class="carte-hebergement">
-                    <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'auberge-canebiere">
-                    <figcaption class="description-carte">
-                        <h3>Auberge Canebière</h3>
-                        <p>Nuit à partir de <b>25€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+            <ul>
+                <li>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'auberge-canebiere">
+                            <figcaption class="description-carte">
+                                <h3>Auberge Canebière</h3>
+                                <p>Nuit à partir de <b>25€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
-
-            <a href="#">
-                <figure class="carte-hebergement">
-                    <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'hôtel-du-port">
-                    <figcaption class="description-carte">
-                        <h3>Hôtel du port</h3>
-                        <p>Nuit à partir de <b>52€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'hôtel-du-port">
+                            <figcaption class="description-carte">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de <b>52€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
 
-
-            <a href="#">
-                <figure class="carte-hebergement">
-                    <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'hôtel-les-mouettes">
-                    <figcaption class="description-carte">
-                        <h3>Hôtel Les mouettes</h3>
-                        <p>Nuit à partir de <b>76€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                <li>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'hôtel-les-mouettes">
+                            <figcaption class="description-carte">
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de <b>76€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
 
-            <!-- 2eme ligne -->
-
-            <a href="#">
-                <figure class="carte-hébergement">
-                    <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'hôtel-de-la-mer">
-                    <figcaption class="description-carte">
-                        <h3>Hôtel de la mer</h3>
-                        <p>Nuit à partir de <b>46€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                <!-- 2eme ligne -->
+                <li>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'hôtel-de-la-mer">
+                            <figcaption class="description-carte">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de <b>46€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
-
-            <a href="#">
-                <figure class="carte-hébergement">
-                    <img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'auberge-le-panier">
-                    <figcaption class="description-carte">
-                        <h3>Auberge le panier</h3>
-                        <p>Nuit à partir de <b>23€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'auberge-le-panier">
+                            <figcaption class="description-carte">
+                                <h3>Auberge le panier</h3>
+                                <p>Nuit à partir de <b>23€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
+                <li>
 
-            <a href="#">
-                <figure class="carte-hébergement">
-                    <img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                        class="img-accommodations" alt="Photo-de-l'hôtel-chez-Amina">
-                    <figcaption class="description-carte">
-                        <h3>Hôtel Chez Amina</h3>
-                        <p>Nuit à partir de <b>96€</b></p>
-                        <figure class="note-hebergement">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                    <a href="#">
+                        <figure class="carte-hebergement">
+                            <img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                class="img-hebergement" alt="Photo-de-l'hôtel-chez-Amina">
+                            <figcaption class="description-carte">
+                                <h3>Hôtel Chez Amina</h3>
+                                <p>Nuit à partir de <b>96€</b></p>
+                                <figure class="note-hebergement">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
+            </ul>
             <a href="#" class="afficher">Afficher Plus</a>
 
         </section>
@@ -193,60 +204,67 @@
 
         <article class="plus-populaires">
             <h2>Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
-
-            <a href="#">
-                <figure class="carte_popular">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="img-popular"
-                        alt="Photo-de-l'hôtel-Le-soleil-du-matin">
-                    <figcaption class="texte_popular">
-                        <h3>Hôtel Le soleil du matin</h3>
-                        <p>Nuit à partir de <b>128€</b></p>
-                        <figure class="note_popular">
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
+            <ul>
+                <li>
+                    <a href="#">
+                        <figure class="carte-populaire">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                class="img-populaires" alt="Photo-de-l'hôtel-Le-soleil-du-matin">
+                            <figcaption class="texte_populaire">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de <b>128€</b></p>
+                                <figure class="note-populaire">
+                                    <i class="fa-solid fa-star.blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
 
-            <a href="#">
-                <figure class="carte_popular">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="img-popular"
-                        alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
-                    <figcaption class="texte_popular">
-                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                        <p>Nuit à partir de <b>71€</b> </p>
-                        <figure class="note_popular stars">
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                <li>
+                    <a href="#">
+                        <figure class="carte-populaire">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
+                            <figcaption class="texte_populaire">
+                                <h3>Chambres d'hôtes<br> au coeur de l'eau </h3>
+                                <p>Nuit à partir de <b>71€</b> </p>
+                                <figure class="note-populaire">
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
 
-            <a href="#">
-                <figure class="carte_popular">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="img-popular"
-                        alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
-                    <figcaption class="texte_popular">
-                        <h3>Hôtel Tout bleu et Blanc </h3>
-                        <p>Nuit à partir de <b>68€</b> </p>
-                        <figure class="note_popular">
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star blue"></i>
-                            <i class="fa-solid fa-star gray"></i>
+                <li>
+                    <a href="#">
+                        <figure class="carte-populaire">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
+                            <figcaption class="texte_populaire">
+                                <h3>Hôtel Tout bleu et Blanc </h3>
+                                <p>Nuit à partir de <b>68€</b> </p>
+                                <figure class="note-populaire">
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star gray"></i>
+                                </figure>
+                            </figcaption>
                         </figure>
-                    </figcaption>
-                </figure>
-            </a>
+                    </a>
+                </li>
+            </ul>
 
         </article>
     </main>
