--- a/index.html
+++ b/index.html
@@ -273,37 +273,42 @@
     <aside>
         <h2>Activités à Marseille</h2>
 
-        <div class="activites">
-            <figure class="card-vieux-port">
-                <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img-port"
-                    alt="Vieux-Port">
-                <figcaption><b>Vieux-Port</b></figcaption>
-            </figure>
-
-            <figure class="card-pomegue">
-                <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-pomegues"
-                    alt="Fort-de-Pomègues">
-                <figcaption><b>Fort de Pomègues</b></figcaption>
-            </figure>
-
-            <figure class="card-calanques">
-                <img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img-calanques"
-                    alt="Parc-national-des-Calanques">
-                <figcaption><b>Parc national des Calanques</b></figcaption>
-            </figure>
-
-            <figure class="card-garde">
-                <img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img-garde"
-                    alt="Notre-Dame-de-la-Garde">
-                <figcaption><b>Notre-Dame-de-la-Garde</b></figcaption>
-            </figure>
+        <div class="activités">
+            <a href="#">
+                <figure class="carte-activité">
+                    <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img-activité"
+                        alt="Vieux-Port">
+                    <figcaption class="titre"><b>Vieux-Port</b></figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="carte-activité">
+                    <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-activité"
+                        alt="Fort-de-Pomègues">
+                    <figcaption class="titre"><b>Fort de Pomègues</b></figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="carte-activité">
+                    <img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img-activité"
+                        alt="Parc-national-des-Calanques">
+                    <figcaption class="titre"><b>Parc national des Calanques</b></figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="carte-activité">
+                    <img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img-activité"
+                        alt="Notre-Dame-de-la-Garde">
+                    <figcaption class="titre"><b>Notre-Dame-de-la-Garde</b></figcaption>
+                </figure>
+            </a>
         </div>
     </aside>
 
     <!--footer-->
 
     <footer>
-        <section class="propos">
+        <div class="intitule">
             <h3>A propos</h3>
             <ul>
                 <li>
@@ -316,8 +321,8 @@
                     <a href="#">Données et confidentialité</a>
                 </li>
             </ul>
-        </section>
-        <section class="nos-hebergements">
+        </div>
+        <div class="intitule">
             <h3>Nos hébergements</h3>
             <ul>
                 <li>
@@ -327,8 +332,8 @@
                     <a href="#">Soumettre votre hôtel</a>
                 </li>
             </ul>
-        </section>
-        <section class="assist">
+        </div>
+        <div class="intitule">
             <h3>Assistance</h3>
             <ul>
                 <li>
@@ -338,7 +343,7 @@
                     <a href="#">Nous contacter</a>
                 </li>
             </ul>
-        </section>
+        </div>
     </footer>
 
 
