respensive .plus-populaire

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                 class="img-populaires" alt="Photo-de-l'hôtel-Le-soleil-du-matin">
-                            <figcaption class="texte_populaire">
+                            <figcaption class="texte-populaire">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de <b>128€</b></p>
                                 <figure class="note-populaire">
@@ -230,7 +230,7 @@
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                 class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
-                            <figcaption class="texte_populaire">
+                            <figcaption class="texte-populaire">
                                 <h3>Chambres d'hôtes<br> au coeur de l'eau </h3>
                                 <p>Nuit à partir de <b>71€</b> </p>
                                 <figure class="note-populaire">
@@ -250,7 +250,7 @@
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                 class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
-                            <figcaption class="texte_populaire">
+                            <figcaption class="texte-populaire">
                                 <h3>Hôtel Tout bleu et Blanc </h3>
                                 <p>Nuit à partir de <b>68€</b> </p>
                                 <figure class="note-populaire">
