--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                 class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
-                                <h3>Chambres d'hôtes<br> au coeur de l'eau </h3>
+                                <h3>Chambres d'hôtes au coeur de l'eau </h3>
                                 <p>Nuit à partir de <b>71€</b> </p>
                                 <figure class="note-populaire">
                                     <i class="fa-solid fa-star blue"></i>
