mise à jour alt=""

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'auberge-canebiere">
+                                class="img-hebergement" alt="Chambre-blanche-lit-superposé-de-l'auberge-canebiere">
                             <figcaption class="description-carte">
                                 <h3>Auberge Canebière</h3>
                                 <p>Nuit à partir de <b>25€</b></p>
@@ -100,7 +100,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'hôtel-du-port">
+                                class="img-hebergement" alt="Chambre-grise-2-lits-de-l'hôtel-du-port">
                             <figcaption class="description-carte">
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de <b>52€</b></p>
@@ -120,7 +120,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'hôtel-les-mouettes">
+                                class="img-hebergement" alt="Chambre-créme-lit-double-l'hôtel-les-mouettes">
                             <figcaption class="description-carte">
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de <b>76€</b></p>
@@ -141,7 +141,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'hôtel-de-la-mer">
+                                class="img-hebergement" alt="Chambreblanc-bleu-lit-double-de-l'hôtel-de-la-mer">
                             <figcaption class="description-carte">
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de <b>46€</b></p>
@@ -160,7 +160,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'auberge-le-panier">
+                                class="img-hebergement" alt="Chambre-lit-superposé-effet-boisé-de-l'auberge-le-panier">
                             <figcaption class="description-carte">
                                 <h3>Auberge le panier</h3>
                                 <p>Nuit à partir de <b>23€</b></p>
@@ -180,7 +180,7 @@
                     <a href="#">
                         <figure class="carte-hebergement">
                             <img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                class="img-hebergement" alt="Photo-de-l'hôtel-chez-Amina">
+                                class="img-hebergement" alt="Chambre-blanche-avec-lit-et-bureau-l'hôtel-chez-Amina">
                             <figcaption class="description-carte">
                                 <h3>Hôtel Chez Amina</h3>
                                 <p>Nuit à partir de <b>96€</b></p>
@@ -209,7 +209,7 @@
                     <a href="#">
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                class="img-populaires" alt="Photo-de-l'hôtel-Le-soleil-du-matin">
+                                class="img-populaires" alt="Chambre-verte-lit-double-de-l'hôtel-Le-soleil-du-matin">
                             <figcaption class="texte-populaire">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de <b>128€</b></p>
@@ -229,7 +229,8 @@
                     <a href="#">
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                                class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
+                                class="img-populaires"
+                                alt="Chambre-blanc-beige-gris-lit-double-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
                                 <h3>Chambres d'hôtes au coeur de l'eau </h3>
                                 <p>Nuit à partir de <b>71€</b> </p>
@@ -249,7 +250,7 @@
                     <a href="#">
                         <figure class="carte-populaire">
                             <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                                class="img-populaires" alt="Photo-de-l'hôtel-Tout-bleu-et-blanc">
+                                class="img-populaires" alt="Chambre-blanche-lit-double-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
                                 <h3>Hôtel Tout bleu et Blanc </h3>
                                 <p>Nuit à partir de <b>68€</b> </p>
@@ -277,21 +278,21 @@
             <a href="#">
                 <figure class="carte-activité">
                     <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img-activité"
-                        alt="Vieux-Port">
+                        alt="Vieux-Port-grand-plan-bateaux-blanc">
                     <figcaption class="titre"><b>Vieux-Port</b></figcaption>
                 </figure>
             </a>
             <a href="#">
                 <figure class="carte-activité">
                     <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-activité"
-                        alt="Fort-de-Pomègues">
+                        alt="Fort-de-Pomègues-plan-bas-forteresse-rochers">
                     <figcaption class="titre"><b>Fort de Pomègues</b></figcaption>
                 </figure>
             </a>
             <a href="#">
                 <figure class="carte-activité">
                     <img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img-activité"
-                        alt="Parc-national-des-Calanques">
+                        alt="Parc-national-des-Calanques-vision-de-anses-criques-mer">
                     <figcaption class="titre"><b>Parc national des Calanques</b></figcaption>
                 </figure>
             </a>
