--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                                     <i class="fa-solid fa-star blue"></i>
                                     <i class="fa-solid fa-star blue"></i>
                                     <i class="fa-solid fa-star blue"></i>
+                                    <i class="fa-solid fa-star blue"></i>
                                     <i class="fa-solid fa-star gray"></i>
                                 </figure>
                             </figcaption>
@@ -233,7 +234,7 @@
                                 alt="Chambre-blanc-beige-gris-lit-double-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
                                 <h3>Chambres d'hôtes au coeur de l'eau </h3>
-                                <p>Nuit à partir de <b>71€</b> </p>
+                                <p>Nuit à partir de <b>71€</b></p>
                                 <figure class="note-populaire">
                                     <i class="fa-solid fa-star blue"></i>
                                     <i class="fa-solid fa-star blue"></i>
@@ -253,7 +254,7 @@
                                 class="img-populaires" alt="Chambre-blanche-lit-double-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
                                 <h3>Hôtel Tout bleu et Blanc </h3>
-                                <p>Nuit à partir de <b>68€</b> </p>
+                                <p>Nuit à partir de <b>68€</b></p>
                                 <figure class="note-populaire">
                                     <i class="fa-solid fa-star blue"></i>
                                     <i class="fa-solid fa-star blue"></i>
