<meta name=  Booki-Openclassroom>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Booki</title>
     <link rel="preload" href="css/style.css" as="style">
 
-    <meta name="description" content="Template to start HTML">
+    <meta name="Booki-Openclassroom" content="Template to start HTML">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
