remplacement d'article en section dans main

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="info"><i class="fa-solid fa-info"></i>Plus de 500 logements disponibles dans cette ville</p>
 
     <main>
-        <section class="hebergement">
+        <article class="hebergement">
             <h2>Hébergement à Marseille</h2>
 
             <!-- 1re ligne -->
@@ -198,11 +198,11 @@
             </ul>
             <a href="#" class="afficher">Afficher Plus</a>
 
-        </section>
+        </article>
 
         <!-- article dans main -->
 
-        <article class="plus-populaires">
+        <section class="plus-populaires">
             <h2>Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
             <ul>
                 <li>
@@ -268,7 +268,7 @@
                 </li>
             </ul>
 
-            </section>
+        </section>
     </main>
 
     <!-- début aside -->
