--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 class="img-populaires"
                                 alt="Chambre-blanc-beige-gris-lit-double-de-l'hôtel-Tout-bleu-et-blanc">
                             <figcaption class="texte-populaire">
-                                <h3>Chambres d'hôtes au coeur de l'eau </h3>
+                                <h3>Chambres d'hôtes Au coeur de l'eau </h3>
                                 <p>Nuit à partir de <b>71€</b></p>
                                 <figure class="note-populaire">
                                     <i class="fa-solid fa-star blue"></i>
