id=section 1 et 2  dans article et aside pour lien nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
     <link rel="preload" href="css/style.css" as="style">
-
     <meta name="Booki-Openclassroom" content="Template to start HTML">
     <link rel="stylesheet" href="css/style.css">
 
@@ -19,10 +18,10 @@
 
         <ul>
             <li>
-                <a href="#hebergements">Hébergements</a>
+                <a href="#section1" class="nav-link">Hébergements</a>
             </li>
             <li>
-                <a href="#Activités">Activités</a>
+                <a href="#section2" class="nav-link">Activités</a>
             </li>
         </ul>
 
@@ -72,7 +71,7 @@
     <p class="info"><i class="fa-solid fa-info"></i>Plus de 500 logements disponibles dans cette ville</p>
 
     <main>
-        <article class="hebergement">
+        <article id="section1" class="hebergement">
             <h2>Hébergement à Marseille</h2>
 
             <!-- 1re ligne -->
@@ -275,7 +274,7 @@
     <aside>
         <h2>Activités à Marseille</h2>
 
-        <div class="activités">
+        <div id="section2" class="activités">
             <a href="#">
                 <figure class="carte-activité">
                     <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img-activité"
